--- a/meccsek.html
+++ b/meccsek.html
@@ -1,401 +1,175 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html>
 <head>
 <meta charset="UTF-8">
-<title>LuckyPitch | Matches</title>
+<title>Live Matches</title>
 
 <style>
-:root{
-    --primary:#00ff88;
-    --text:white;
-    --box-bg:rgba(0,0,0,0.7);
-    --btn-bg:#cde1e3;
-    --btn-text:black;
-}
-
-body.light{
-    --text:#111;
-    --box-bg:rgba(255,255,255,0.85);
-    --btn-bg:#111;
-    --btn-text:white;
-}
-
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',sans-serif;}
-
 body{
-    min-height:100vh;
-    background:url("meccsekfoci.jpg") center/cover fixed;
-    color:var(--text);
-    transition:.3s;
-    padding-bottom:50px;
-}
-body.light{background:url("meccsekfocivil.jpg") center/cover fixed;}
-
-.container{max-width:900px;margin:0 auto;padding:0 20px;}
-
-nav{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    padding:25px 0;
-}
-.nav-controls{display:flex;gap:10px;}
-
-.date-selector{
-    display:flex;
-    justify-content:center;
-    flex-wrap:wrap;
-    gap:10px;
-    margin-bottom:30px;
-    padding:15px;
-    background:var(--box-bg);
-    border-radius:12px;
-    border:1px solid var(--text);
+  background:#0b0f1a;
+  color:white;
+  font-family:Arial;
+  padding:20px;
 }
 
-.date-btn{
-    background:transparent;
-    border:1px solid var(--text);
-    color:var(--text);
-    padding:10px;
-    border-radius:8px;
-    cursor:pointer;
-    min-width:75px;
-    text-align:center;
-}
-.date-btn.active{
-    background:var(--btn-bg);
-    color:var(--btn-text);
+button{
+  margin:5px;
+  padding:8px 14px;
+  cursor:pointer;
 }
 
-.league-section{
-    background:var(--box-bg);
-    border-radius:12px;
-    margin-bottom:25px;
-    overflow:hidden;
-    border:1px solid var(--text);
+.match{
+  background:#121a2b;
+  margin-bottom:15px;
+  padding:15px;
+  border-radius:10px;
+  transition:0.3s;
 }
 
-.league-header{
-    padding:15px;
-    background:rgba(255,255,255,0.1);
-    font-weight:bold;
+.goalFlash{
+  animation:flash 0.8s;
 }
 
-.match-row{
-    padding:15px;
-    display:grid;
-    grid-template-columns:1fr 150px 1fr;
-    align-items:center;
-    border-top:1px solid rgba(255,255,255,0.1);
+@keyframes flash{
+  0%{background:#00ffcc;}
+  100%{background:#121a2b;}
 }
 
-.score-box{
-    background:rgba(0,0,0,0.5);
-    padding:10px;
-    border-radius:8px;
-    text-align:center;
-    font-weight:bold;
-    border:1px solid var(--text);
-    position:relative;
+.bar{
+  width:100%;
+  height:8px;
+  background:#222;
+  border-radius:5px;
+  overflow:hidden;
+  margin-top:8px;
 }
 
-.goal-flash{
-    animation:goalFlash .6s ease 4;
-}
-@keyframes goalFlash{
-    0%{background:#00ff88;}
-    50%{background:#ffffff;}
-    100%{background:rgba(0,0,0,0.5);}
-}
-
-.live-indicator{
-    color:red;
-    font-weight:bold;
-    animation:blink 1s infinite;
-}
-@keyframes blink{
-    0%{opacity:1}
-    50%{opacity:.2}
-    100%{opacity:1}
-}
-
-.progress-bar{
-    height:4px;
-    background:#333;
-    border-radius:3px;
-    margin-top:6px;
-    overflow:hidden;
-}
-.progress-fill{
-    height:100%;
-    background:#00ff88;
-}
-
-.analyze-btn{
-    width:100%;
-    margin-top:6px;
-    padding:6px;
-    font-size:10px;
-    background:var(--primary);
-    color:black;
-    border:none;
-    border-radius:4px;
-    cursor:pointer;
-    font-weight:bold;
-}
-
-.crest{width:30px;height:30px;object-fit:contain;}
-.team-box{display:flex;align-items:center;gap:10px;}
-.team-box.home{justify-content:flex-end;text-align:right;}
-
-button,.btn-link{
-    padding:10px 15px;
-    border-radius:6px;
-    cursor:pointer;
-    font-weight:bold;
-    background:var(--btn-bg);
-    color:var(--btn-text);
-    text-decoration:none;
-    border:none;
+.progress{
+  height:100%;
+  background:#00ffcc;
+  width:0%;
+  transition:0.4s;
 }
 </style>
 </head>
 
-<body class="dark">
-<div class="container">
+<body>
 
-<nav>
-<div style="font-size:24px;font-weight:bold;">LuckyPitch</div>
-<div class="nav-controls">
-<button id="theme-btn" onclick="toggleTheme()">☀️</button>
-<button id="lang-btn" onclick="toggleLang()">EN 🇬🇧</button>
-<a href="/home" id="back-btn" class="btn-link">← VISSZA</a>
-</div>
-</nav>
+<h2 id="title">Live meccsek</h2>
 
-<div id="date-selector" class="date-selector"></div>
-<div id="app">Betöltés...</div>
+<button onclick="setLang('hu')">HU</button>
+<button onclick="setLang('en')">EN</button>
 
-<audio id="goalSound">
-<source src="https://actions.google.com/sounds/v1/sports/crowd_cheer.ogg">
-</audio>
+<div id="date"></div>
+<br>
 
-</div>
+<div id="matches"></div>
 
 <script>
+let lang = "hu";
+let lastScores = {};
 
-/* ================= TRANSLATIONS ================= */
-
-const translations={
-hu:{
-today:"MA",
-back:"← VISSZA",
-analyze:"ELEMZÉS",
-days:["Vas","Hét","Ked","Sze","Csüt","Pén","Szo"],
-empty:"Nincs meccs ezen a napon."
-},
-en:{
-today:"TODAY",
-back:"← BACK",
-analyze:"ANALYZE",
-days:["Sun","Mon","Tue","Wed","Thu","Fri","Sat"],
-empty:"No matches for this day."
-}
-};
-
-let currentLang=localStorage.getItem("lang")||"hu";
-
-/* ================= STATE ================= */
-
-let allMatches=[];
-let selectedDate=new Date().toLocaleDateString('sv');
-let prevScores={};
-
-/* ================= UI ================= */
-
-function toggleTheme(){
-const t=document.body.classList.contains("light")?"dark":"light";
-document.body.className=t;
+function setLang(l){
+  lang=l;
+  render();
 }
 
-function toggleLang(){
-currentLang=currentLang==="hu"?"en":"hu";
-localStorage.setItem("lang",currentLang);
-updateUI();
+function nowDate(){
+  const d=new Date();
+  return d.toLocaleString();
 }
 
-function updateUI(){
-document.getElementById("lang-btn").innerText=
-currentLang==="hu"?"EN 🇬🇧":"HU 🇭🇺";
+function getMinute(match){
 
-document.getElementById("back-btn").innerText=
-translations[currentLang].back;
+  if(match.minute) return match.minute;
 
-renderAll();
+  if(match.status==="IN_PLAY" || match.status==="PAUSED"){
+    const start=new Date(match.utcDate);
+    const diff=Math.floor((Date.now()-start)/60000);
+    return Math.max(0,diff);
+  }
+
+  return null;
 }
 
-/* ================= LIVE HELPERS ================= */
+function formatMinute(min){
+
+  if(min<=45) return min+"'";
+
+  if(min<=90) return "45+"+(min-45)+"'";
+
+  return "90+"+(min-90)+"'";
+}
 
 function playGoalSound(){
-document.getElementById("goalSound").play();
+  const ctx=new AudioContext();
+  const osc=ctx.createOscillator();
+  osc.connect(ctx.destination);
+  osc.start();
+  setTimeout(()=>osc.stop(),200);
 }
 
-function detectGoal(match){
-const id=match.id;
-const total=(match.score.fullTime.home||0)+(match.score.fullTime.away||0);
+let dataCache=null;
 
-if(prevScores[id]!==undefined && total>prevScores[id]){
-playGoalSound();
-return true;
-}
-prevScores[id]=total;
-return false;
+async function load(){
+
+  const res=await fetch("/live-matches?"+Date.now());
+  dataCache=await res.json();
+  render();
 }
 
-function isLive(status){
-return["IN_PLAY","LIVE","PAUSED"].includes(status);
+function render(){
+
+  document.getElementById("title").innerText =
+    lang==="hu" ? "Live meccsek" : "Live matches";
+
+  document.getElementById("date").innerText =
+    nowDate();
+
+  const container=document.getElementById("matches");
+  container.innerHTML="";
+
+  if(!dataCache?.matches) return;
+
+  dataCache.matches.forEach(m=>{
+
+    const id=m.id;
+    const home=m.homeTeam.name;
+    const away=m.awayTeam.name;
+
+    const score =
+      (m.score.fullTime.home ?? 0)+"-"+(m.score.fullTime.away ?? 0);
+
+    if(lastScores[id] && lastScores[id]!==score){
+      playGoalSound();
+    }
+
+    const div=document.createElement("div");
+    div.className="match";
+
+    if(lastScores[id] && lastScores[id]!==score){
+      div.classList.add("goalFlash");
+    }
+
+    lastScores[id]=score;
+
+    const minute=getMinute(m);
+
+    const percent=minute
+      ? Math.min(minute/90*100,100)
+      : 0;
+
+    div.innerHTML=`
+      <b>${home} vs ${away}</b><br>
+      ${score}<br>
+      ${minute ? formatMinute(minute) : ""}
+      <div class="bar">
+        <div class="progress" style="width:${percent}%"></div>
+      </div>
+    `;
+
+    container.appendChild(div);
+  });
 }
 
-function formatMinute(min,inj){
-if(!min) return "";
-if(inj>0) return `${min}+${inj}'`;
-return `${min}'`;
-}
-
-function getProgress(min){
-if(!min) return 0;
-return Math.min(100,(min/90)*100);
-}
-
-/* ================= FETCH ================= */
-
-async function loadMatches(){
-try{
-const res=await fetch("/live-matches");
-const data=await res.json();
-allMatches=data.matches||[];
-renderAll();
-}catch{
-document.getElementById("app").innerText="Szerver hiba.";
-}
-}
-
-/* ================= RENDER ================= */
-
-function renderAll(){
-
-const selector=document.getElementById("date-selector");
-selector.innerHTML="";
-
-const todayStr=new Date().toLocaleDateString('sv');
-const dates=[...new Set(allMatches.map(m=>m.utcDate.split('T')[0]))].sort();
-
-dates.forEach(date=>{
-const d=new Date(date);
-
-const label=(date===todayStr)
-?translations[currentLang].today
-:translations[currentLang].days[d.getDay()];
-
-const btn=document.createElement("button");
-btn.className=`date-btn ${date===selectedDate?'active':''}`;
-
-btn.innerHTML=`
-${label}<br>
-<span>${d.getMonth()+1}.${d.getDate()}</span>
-`;
-
-btn.onclick=()=>{selectedDate=date;renderAll();}
-selector.appendChild(btn);
-});
-
-const app=document.getElementById("app");
-app.innerHTML="";
-
-const filtered=allMatches.filter(m=>m.utcDate.startsWith(selectedDate));
-
-if(!filtered.length){
-app.innerHTML=`<p style="text-align:center;padding:20px;">
-${translations[currentLang].empty}
-</p>`;
-return;
-}
-
-const leagues={};
-filtered.forEach(m=>{
-if(!leagues[m.competition.id])
-leagues[m.competition.id]={name:m.competition.name,matches:[]};
-leagues[m.competition.id].matches.push(m);
-});
-
-Object.values(leagues).forEach(league=>{
-
-const div=document.createElement("div");
-div.className="league-section";
-
-div.innerHTML=`<div class="league-header">${league.name}</div>`+
-
-league.matches.map(m=>{
-
-const live=isLive(m.status);
-const minute=m.minute||m.elapsed||0;
-const injury=m.injuryTime||m.stoppage||0;
-const minuteText=formatMinute(minute,injury);
-const progress=getProgress(minute);
-const goalFlash=detectGoal(m)?"goal-flash":"";
-
-return`
-<div class="match-row">
-
-<div class="team-box home">
-${m.homeTeam.shortName||m.homeTeam.name}
-<img src="${m.homeTeam.crest}" class="crest">
-</div>
-
-<div class="score-box ${goalFlash}">
-
-${live
-?`<div class="live-indicator">LIVE ${minuteText}</div>`
-:`<div style="font-size:10px;opacity:.6">${m.status}</div>`}
-
-${m.score.fullTime.home??0} : ${m.score.fullTime.away??0}
-
-${live?`
-<div class="progress-bar">
-<div class="progress-fill" style="width:${progress}%"></div>
-</div>`:""}
-
-<button class="analyze-btn"
-onclick="location.href='/elemzes?id=${m.id}'">
-${translations[currentLang].analyze}
-</button>
-
-</div>
-
-<div class="team-box away">
-<img src="${m.awayTeam.crest}" class="crest">
-${m.awayTeam.shortName||m.awayTeam.name}
-</div>
-
-</div>
-`;
-}).join('');
-
-app.appendChild(div);
-});
-}
-
-/* ================= INIT ================= */
-
-async function init(){
-updateUI();
-await loadMatches();
-setInterval(loadMatches,30000);
-}
-
-init();
-
-</script>
-</body>
-</html>
+loa
