--- a/meccsek.html
+++ b/meccsek.html
@@ -7,115 +7,92 @@
     <script async crossorigin="anonymous" data-clerk-publishable-key="pk_test_YWxsb3dlZC1pbnNlY3QtOTguY2xlcmsuYWNjb3VudHMuZGV2JA" src="https://allowed-insect-98.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js" type="text/javascript"></script>
     <style>
         :root { --bg: #0f172a; --card: #1e293b; --primary: #00ff88; --text: #f8fafc; }
-        body { background: var(--bg); color: var(--text); font-family: 'Segoe UI', sans-serif; margin: 0; }
-        nav { display: flex; justify-content: space-between; padding: 1rem 5%; background: rgba(0,0,0,0.3); align-items: center; }
+        body { background: var(--bg); color: var(--text); font-family: sans-serif; margin: 0; }
+        nav { display: flex; justify-content: space-between; padding: 1rem 5%; background: rgba(0,0,0,0.3); }
         .container { max-width: 800px; margin: 2rem auto; padding: 0 1rem; }
-        
-        .date-selector { display: flex; gap: 10px; justify-content: center; margin-bottom: 30px; overflow-x: auto; padding: 10px; }
-        .date-btn { background: var(--card); border: 1px solid #334155; color: white; padding: 10px 15px; border-radius: 10px; cursor: pointer; white-space: nowrap; }
-        .date-btn.active { border-color: var(--primary); color: var(--primary); font-weight: bold; }
-        
-        .match-card { background: var(--card); padding: 1.5rem; border-radius: 15px; display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px; border: 1px solid rgba(255,255,255,0.05); }
-        .team { width: 35%; text-align: center; font-weight: bold; }
-        .team img { width: 40px; display: block; margin: 0 auto 10px; }
-        .score-box { text-align: center; width: 30%; }
-        .score { font-size: 2rem; font-weight: 900; color: var(--primary); }
-        .btn-anal { background: var(--primary); color: #000; text-decoration: none; padding: 8px 12px; border-radius: 8px; font-size: 0.8rem; font-weight: bold; display: inline-block; margin-top: 10px; }
-        .no-data { text-align: center; opacity: 0.5; margin-top: 50px; }
+        .date-bar { display: flex; gap: 10px; justify-content: center; margin-bottom: 20px; overflow-x: auto; padding: 10px; }
+        .date-btn { background: var(--card); border: 1px solid #334155; color: white; padding: 8px 15px; border-radius: 8px; cursor: pointer; }
+        .date-btn.active { border-color: var(--primary); color: var(--primary); }
+        .match-card { background: var(--card); padding: 1rem; border-radius: 12px; display: flex; align-items: center; margin-bottom: 10px; border: 1px solid rgba(255,255,255,0.05); }
+        .team { flex: 1; text-align: center; font-weight: bold; font-size: 0.9rem; }
+        .team img { width: 30px; display: block; margin: 0 auto 5px; }
+        .score { flex: 1; text-align: center; font-size: 1.5rem; font-weight: bold; color: var(--primary); }
+        .btn-anal { background: var(--primary); color: #000; text-decoration: none; padding: 5px 10px; border-radius: 5px; font-size: 0.7rem; font-weight: bold; display: block; margin-top: 5px; }
     </style>
 </head>
 <body>
 
 <nav>
-    <a href="/" style="color:var(--primary); text-decoration:none; font-size:1.5rem; font-weight:900;">LuckyPitch</a>
-    <div style="display:flex; align-items:center; gap:15px;">
-        <button onclick="toggleLang()" id="lang-btn" style="cursor:pointer; padding:5px 10px;">EN</button>
-        <div id="user-button"></div>
-    </div>
+    <a href="/" style="color:var(--primary); text-decoration:none; font-weight:900;">LuckyPitch</a>
+    <button onclick="toggleLang()" id="lang-btn">EN</button>
 </nav>
 
 <div class="container">
-    <h2 id="page-title" style="text-align:center; margin-bottom:20px;">Mérkőzések</h2>
-    <div class="date-selector" id="date-bar"></div>
+    <h2 id="title" style="text-align:center; margin-bottom:20px;">Mérkőzések</h2>
+    <div class="date-bar" id="date-bar"></div>
     <div id="match-list"></div>
 </div>
 
 <script>
     const trans = {
-        hu: { title: "Mérkőzések", analysis: "Elemzés", empty: "Nincs mérkőzés ezen a napon.", loading: "Betöltés...", btn: "EN" },
-        en: { title: "Matches", analysis: "Analysis", empty: "No matches for this day.", loading: "Loading...", btn: "HU" }
+        hu: { title: "Mérkőzések", anal: "Elemzés", empty: "Nincs meccs.", btn: "EN" },
+        en: { title: "Matches", anal: "Analysis", empty: "No matches.", btn: "HU" }
     };
-
-    let selectedDate = new Date().toISOString().split('T')[0];
+    let selDate = new Date().toISOString().split('T')[0];
 
     async function init() {
         await Clerk.load();
-        if (Clerk.user) Clerk.mountUserButton(document.getElementById('user-button'));
         renderDates();
-        fetchMatches();
-        updateText();
+        loadMatches();
+        updateUI();
     }
 
     function renderDates() {
         const bar = document.getElementById('date-bar');
         bar.innerHTML = '';
-        for (let i = -3; i <= 3; i++) {
-            const d = new Date();
-            d.setDate(d.getDate() + i);
-            const iso = d.toISOString().split('T')[0];
-            const btn = document.createElement('button');
-            btn.className = `date-btn ${iso === selectedDate ? 'active' : ''}`;
-            btn.innerText = i === 0 ? "Ma" : d.toLocaleDateString('hu-HU', {month:'short', day:'numeric'});
-            btn.onclick = () => { selectedDate = iso; renderDates(); fetchMatches(); };
+        for(let i=-3; i<=3; i++) {
+            let d = new Date(); d.setDate(d.getDate() + i);
+            let iso = d.toISOString().split('T')[0];
+            let btn = document.createElement('button');
+            btn.className = `date-btn ${iso === selDate ? 'active' : ''}`;
+            btn.innerText = i === 0 ? "Ma" : d.toLocaleDateString('hu-HU', {day:'numeric', month:'short'});
+            btn.onclick = () => { selDate = iso; renderDates(); loadMatches(); };
             bar.appendChild(btn);
         }
     }
 
-    async function fetchMatches() {
+    async function loadMatches() {
         const lang = localStorage.getItem('lang') || 'hu';
         const list = document.getElementById('match-list');
-        list.innerHTML = `<p class="no-data">${trans[lang].loading}</p>`;
-
+        list.innerHTML = '<p style="text-align:center;">Betöltés...</p>';
         try {
-            const res = await fetch(`/live-matches?date=${selectedDate}`);
+            const res = await fetch(`/live-matches?date=${selDate}`);
             const data = await res.json();
-
-            if (!data.matches || data.matches.length === 0) {
-                list.innerHTML = `<p class="no-data">${trans[lang].empty}</p>`;
+            if(!data.matches || data.matches.length === 0) {
+                list.innerHTML = `<p style="text-align:center; opacity:0.5;">${trans[lang].empty}</p>`;
                 return;
             }
-
             list.innerHTML = data.matches.map(m => `
                 <div class="match-card">
-                    <div class="team">
-                        <img src="${m.homeTeam.crest}" onerror="this.src='https://via.placeholder.com/40'">
-                        ${m.homeTeam.shortName || m.homeTeam.name}
+                    <div class="team"><img src="${m.homeTeam.crest}">${m.homeTeam.shortName || m.homeTeam.name}</div>
+                    <div class="score">
+                        ${m.score.fullTime.home ?? 0} : ${m.score.fullTime.away ?? 0}
+                        <a href="/elemzes" class="btn-anal">${trans[lang].anal}</a>
                     </div>
-                    <div class="score-box">
-                        <div class="score">${m.score.fullTime.home ?? 0}:${m.score.fullTime.away ?? 0}</div>
-                        <a href="/elemzes" class="btn-anal">${trans[lang].analysis}</a>
-                    </div>
-                    <div class="team">
-                        <img src="${m.awayTeam.crest}" onerror="this.src='https://via.placeholder.com/40'">
-                        ${m.awayTeam.shortName || m.awayTeam.name}
-                    </div>
+                    <div class="team"><img src="${m.awayTeam.crest}">${m.awayTeam.shortName || m.awayTeam.name}</div>
                 </div>
             `).join('');
-        } catch (e) {
-            list.innerHTML = `<p class="no-data">Hiba történt az adatok lekérésekor.</p>`;
-        }
+        } catch(e) { list.innerHTML = "Hiba történt."; }
     }
 
     function toggleLang() {
-        const lang = localStorage.getItem('lang') === 'hu' ? 'en' : 'hu';
-        localStorage.setItem('lang', lang);
-        updateText();
-        fetchMatches();
+        localStorage.setItem('lang', (localStorage.getItem('lang') === 'hu' ? 'en' : 'hu'));
+        updateUI(); loadMatches();
     }
 
-    function updateText() {
+    function updateUI() {
         const lang = localStorage.getItem('lang') || 'hu';
-        document.getElementById('page-title').innerText = trans[lang].title;
+        document.getElementById('title').innerText = trans[lang].title;
         document.getElementById('lang-btn').innerText = trans[lang].btn;
     }
 
