--- a/elemzes.html
+++ b/elemzes.html
@@ -7,52 +7,60 @@
     <script async crossorigin="anonymous" data-clerk-publishable-key="pk_test_YWxsb3dlZC1pbnNlY3QtOTguY2xlcmsuYWNjb3VudHMuZGV2JA" src="https://allowed-insect-98.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js" type="text/javascript"></script>
     <style>
         :root { --bg: #0a0f1e; --card: #162033; --primary: #00ff88; --text: #fff; }
-        body { background: var(--bg); color: var(--text); font-family: sans-serif; }
-        .container { max-width: 1000px; margin: 2rem auto; padding: 1rem; }
-        .analysis-card { background: var(--card); border-radius: 15px; padding: 1.5rem; margin-bottom: 1.5rem; border-left: 5px solid var(--primary); }
-        .prediction { font-size: 1.2rem; font-weight: bold; color: var(--primary); margin: 10px 0; }
-        .confidence-bar { background: #334155; height: 10px; border-radius: 5px; margin-top: 5px; overflow: hidden; }
-        .confidence-fill { background: var(--primary); height: 100%; transition: 1s; }
-        .badge { background: #38bdf8; color: #000; padding: 2px 8px; border-radius: 4px; font-size: 0.7rem; font-weight: bold; }
+        body { background: var(--bg); color: var(--text); font-family: sans-serif; margin: 0; }
+        nav { padding: 1rem 5%; background: rgba(0,0,0,0.3); }
+        .container { max-width: 900px; margin: 2rem auto; padding: 1rem; }
+        .analysis-card { background: var(--card); border-radius: 16px; padding: 1.5rem; margin-bottom: 20px; border-left: 5px solid var(--primary); }
+        .prediction { font-size: 1.3rem; font-weight: bold; color: var(--primary); margin: 10px 0; }
+        .confidence-bg { background: #334155; height: 8px; border-radius: 4px; margin-top: 10px; }
+        .confidence-fill { background: var(--primary); height: 100%; border-radius: 4px; transition: 1s ease-out; }
     </style>
 </head>
 <body>
 
-<nav style="padding: 1rem 5%; background: rgba(0,0,0,0.3);"><a href="/" style="color:var(--primary); font-weight:900; text-decoration:none;">LuckyPitch</a></nav>
+<nav><a href="/" style="color:var(--primary); text-decoration:none; font-weight:900;">LuckyPitch</a></nav>
 
 <div class="container">
-    <h2 style="margin-bottom:2rem;">Smart Analysis & Betting Tips</h2>
-    <div id="analysis-list">Betöltés...</div>
+    <h2 id="anal-title">Okos Elemzések</h2>
+    <div id="analysis-list">Adatok betöltése...</div>
 </div>
 
 <script>
     async function init() {
         await Clerk.load();
-        if (!Clerk.user) { window.location.href = "/"; return; }
-        loadData();
+        if (!Clerk.user) {
+            window.location.href = "/"; // Ha nincs belépve, vissza a főoldalra
+            return;
+        }
+        loadAnalysis();
     }
 
-    async function loadData() {
+    async function loadAnalysis() {
         const list = document.getElementById('analysis-list');
         try {
             const res = await fetch('/api/odds-data');
             const data = await res.json();
-            if (!data || data.length === 0) { list.innerHTML = "Nincs elég adat az elemzéshez."; return; }
+
+            if (!data || data.length === 0) {
+                list.innerHTML = "<p>Jelenleg nincs elemzésre váró kiemelt mérkőzés.</p>";
+                return;
+            }
 
             list.innerHTML = data.map(m => {
-                const conf = Math.floor(Math.random() * 25) + 65; // Szimulált algoritmus %
+                const prob = Math.floor(Math.random() * 20) + 70; // Algoritmus szimuláció
                 return `
                     <div class="analysis-card">
-                        <span class="badge">VALUE BET</span>
-                        <h3 style="margin-top:10px;">${m.home_team} vs ${m.away_team}</h3>
-                        <p style="opacity:0.7; font-size:0.9rem;">${m.sport_title}</p>
-                        <div class="prediction">Tipp: ${m.home_team} győzelem vagy döntetlen</div>
-                        <div style="font-size:0.8rem; margin-top:15px;">Bizalmi szint: ${conf}%</div>
-                        <div class="confidence-bar"><div class="confidence-fill" style="width:${conf}%"></div></div>
+                        <div style="font-size: 0.8rem; color: #38bdf8; font-weight: bold;">PREMIUM TIPP</div>
+                        <h3 style="margin: 10px 0;">${m.home_team} vs ${m.away_team}</h3>
+                        <div class="prediction">Tipp: Hazai vagy Döntetlen (1X)</div>
+                        <div style="font-size: 0.9rem; margin-top:15px;">Bizalmi szint: ${prob}%</div>
+                        <div class="confidence-bg"><div class="confidence-fill" style="width: ${prob}%"></div></div>
                     </div>
                 `;
             }).join('');
-        } catch (e) { list.innerHTML = "Hiba az adatok lekérésekor."; }
+        } catch (e) {
+            list.innerHTML = "Hiba az adatok lekérésekor.";
+        }
     }
     window.onload = init;
 </script>
