--- a/meccsek.html
+++ b/meccsek.html
@@ -9,25 +9,25 @@
         body { background: var(--bg); color: var(--text); font-family: sans-serif; margin: 0; padding: 20px; }
         .container { max-width: 800px; margin: 0 auto; }
         .date-bar { display: flex; gap: 10px; justify-content: center; margin-bottom: 20px; overflow-x: auto; padding: 10px; }
-        .date-btn { background: var(--card); border: 1px solid #334155; color: white; padding: 10px; border-radius: 8px; cursor: pointer; min-width: 80px; }
+        .date-btn { background: var(--card); border: 1px solid #334155; color: white; padding: 10px; border-radius: 8px; cursor: pointer; }
         .date-btn.active { border-color: var(--primary); color: var(--primary); }
         .match-card { background: var(--card); padding: 15px; border-radius: 12px; display: flex; align-items: center; margin-bottom: 10px; border: 1px solid rgba(255,255,255,0.1); }
-        .team { flex: 1; text-align: center; font-weight: bold; }
+        .team { flex: 1; text-align: center; }
+        .team img { width: 30px; display: block; margin: 0 auto 5px; }
         .score { flex: 1; text-align: center; font-size: 1.5rem; color: var(--primary); font-weight: bold; }
-        .btn-anal { background: var(--primary); color: black; text-decoration: none; padding: 5px 10px; border-radius: 5px; font-size: 0.8rem; display: block; margin-top: 10px; font-weight: bold; }
-        .status { text-align: center; opacity: 0.6; margin-top: 20px; }
+        .btn-anal { background: var(--primary); color: black; text-decoration: none; padding: 5px 10px; border-radius: 5px; font-size: 0.8rem; display: block; margin-top: 5px; font-weight: bold; }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h1 style="text-align: center; color: var(--primary);">LuckyPitch Meccsek</h1>
+    <h1 style="text-align:center; color:var(--primary);">Mérkőzések</h1>
     <div class="date-bar" id="date-bar"></div>
     <div id="match-list"></div>
 </div>
 
 <script>
-    let selectedDate = new Date().toISOString().split('T')[0];
+    let currentDay = new Date().toISOString().split('T')[0];
 
     function renderDates() {
         const bar = document.getElementById('date-bar');
@@ -37,40 +37,49 @@
             d.setDate(d.getDate() + i);
             const iso = d.toISOString().split('T')[0];
             const btn = document.createElement('button');
-            btn.className = `date-btn ${iso === selectedDate ? 'active' : ''}`;
+            btn.className = `date-btn ${iso === currentDay ? 'active' : ''}`;
             btn.innerText = i === 0 ? "MA" : d.toLocaleDateString('hu-HU', {month:'short', day:'numeric'});
-            btn.onclick = () => { selectedDate = iso; renderDates(); loadMatches(); };
+            btn.onclick = () => { currentDay = iso; renderDates(); loadMatches(); };
             bar.appendChild(btn);
         }
     }
 
     async function loadMatches() {
         const list = document.getElementById('match-list');
-        list.innerHTML = '<p class="status">Meccsek keresése...</p>';
+        list.innerHTML = '<p style="text-align:center; opacity:0.5;">Betöltés...</p>';
         
         try {
-            // FONTOS: Ez hívja meg a szerveredet!
-            const res = await fetch(`/live-matches?date=${selectedDate}`);
+            const res = await fetch(`/live-matches?date=${currentDay}`);
             const data = await res.json();
 
             if (!data.matches || data.matches.length === 0) {
-                list.innerHTML = '<p class="status">Nincs elérhető nagy meccs ezen a napon az ingyenes ligákban.</p>';
+                list.innerHTML = `
+                    <div style="text-align:center; opacity:0.5; margin-top:30px;">
+                        <p>Nincs meccs az ingyenes ligákban ezen a napon.</p>
+                        <p style="font-size:0.8rem;">(API státusz: OK, Adat: Üres)</p>
+                        <p style="font-size:0.8rem; color:var(--primary);">Próbáld ki a SZOMBATOT!</p>
+                    </div>`;
                 return;
             }
 
             list.innerHTML = data.matches.map(m => `
                 <div class="match-card">
-                    <div class="team">${m.homeTeam.name}</div>
+                    <div class="team">
+                        <img src="${m.homeTeam.crest}" onerror="this.src='https://via.placeholder.com/30'">
+                        ${m.homeTeam.shortName || m.homeTeam.name}
+                    </div>
                     <div class="score">
                         ${m.score.fullTime.home ?? 0} : ${m.score.fullTime.away ?? 0}
                         <a href="elemzes.html" class="btn-anal">ELEMZÉS</a>
                     </div>
-                    <div class="team">${m.awayTeam.name}</div>
+                    <div class="team">
+                        <img src="${m.awayTeam.crest}" onerror="this.src='https://via.placeholder.com/30'">
+                        ${m.awayTeam.shortName || m.awayTeam.name}
+                    </div>
                 </div>
             `).join('');
         } catch (e) {
-            list.innerHTML = '<p class="status">Hiba történt a szerverrel való kapcsolatban.</p>';
-            console.error("Fetch hiba:", e);
+            list.innerHTML = '<p style="text-align:center; color:red;">Hiba a szerverkapcsolatban.</p>';
         }
     }
 
